ch5/readinessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  containers:
    - name: kubia
      image: luksa/kubia
      readinessProbe:
        exec:
          command:
            - ls
            - /var/ready
      ports:
        - containerPort: 8080
