ch5/clusterip-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: ClusterIP
  clusterIP: 10.100.100.100 #고정
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
