ch5/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
  annotaions:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # 이 부분이 서비스를 헤드리스로 만듭니다.
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
