ch5/loadBalancer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  containers:
    - name: kubia
      image: luksa/kubia
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
