ch5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports: # port(사용), targetPort(포워딩)
    - name: http
      port: 80
      targetPort: 8080
    - name: https
       port: 443
       targetPort: 8443
  selector:
    app: kubia
